--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,7 +1,9 @@
 {
+  "NULL":"NULL",
   "HOME": {
     "TITLE": "Rama Estudiantil",
     "CARGO": {
+      
       "CD": {
         "TITLE": "CD",
         "OFFICER": "Officer",
