--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "NULL":"NULL",
   "HOME": {
     "TITLE": "Student Branch",
     "CARGO": {
@@ -55,6 +56,12 @@
       },
       "RAS": {
         "TITLE": "RAS",
+        "DIRECTOR": "RAS Director",
+        "DEV": "Developer",
+        "RESEARCHER": "Researcher"
+      },
+      "EMB": {
+        "TITLE": "EMB",
         "DIRECTOR": "RAS Director",
         "DEV": "Developer",
         "RESEARCHER": "Researcher"
