--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -426,7 +426,6 @@
     "TITLE": "IEEE - 2do Meet Up",
     "CONTENT": "En esta juntada el equipo IEEE discutirá en función de lo logrado (y no logrado!) hasta el momento, la situación actual y las ideas propuestas, como continuar en lo que sigue del año. ¡Es el momento ideal para dar punto de partida a nuevas actividades! ¡Publicá los temas que quieras que se discutan en el form!"
   },
-
   "GENERAL": {
     "PREVIOUS": "PREVIOS",
     "ACTUAL": "ACTUALES"
@@ -611,7 +610,8 @@
       "9": "15:00 - 17:00: Competición: Fase de Eliminación Directa",
       "10": "17:00 - 17:30: Coffee Break",
       "11": "17:30 - 18:00: Competición: Final",
-      "12": "18:00 - 18:30: Ceremonia de premiación"},
+      "12": "18:00 - 18:30: Ceremonia de premiación"
+    },
     "FAQ": {
       "TITLE": "Preguntas frecuentes",
       "1": {
@@ -640,5 +640,65 @@
       }
     },
     "SPONSORS": "Sponsors"
+  },
+  "WIE": {
+    "WHATIS": {
+      "TITLE": "What is IEEE WIE ITBA?",
+      "CONTENT": "IEEE WIE ITBA es un Grupo de Afinidad de la rama estudiantil de IEEE en el ITBA"
+    },
+    "OBJECTIVES": {
+      "TITLE": "Objetivos",
+      "CONTENT": {
+        "TEXT": "Dentro de nuestros objetivos, podemos encontrar:",
+        "BULLET1": "Inspirar a mujeres y niñas para que se animen a estudiar carreras de STEM",
+        "BULLET2": "Empoderar a aquellas que se encuentren en las mismas para que sean líderes"
+      }
+    },
+    "JOIN": {
+      "TITLE": "¡Unite a WIE!",
+      "MEMBERSHIP": "Obtener membresía",
+      "JOIN": "¡Me quiero unir!",
+      "SPONSOR": "Ser sponsor"
+    },
+    "FAQ": {
+      "TITLE": "Preguntas Frecuentes",
+      "QUESTIONS": [
+        {
+          "QUESTION": "¿Quiénes pueden participar de IEEE WIE ITBA?",
+          "ANSWER": "Cualquier persona alumna del ITBA. ¡El único requisito es querer participar!"
+        },
+        {
+          "QUESTION": "¿Puede unirse alguien que no es de Electrónica ni Informática?",
+          "ANSWER": "Sí. Tenemos voluntarios de todas las carreras, tanto Ingenierías como Licenciaturas. La diversidad no es algo acotado a una carrera"
+        },
+        {
+          "QUESTION": "¿Qué es IEEE?",
+          "ANSWER": "IEEE es el Instituto de Ingenieros Eléctricos y Electronicos por sus siglas en Inglés. Es la organización técnica más grande del mundo y su lema es \"Tecnología para el Avance de la Humanidad\". IEEE WIE es un Grupo de Afinidad dentro de IEEE"
+        },
+        {
+          "QUESTION": "¿Qué es un Grupo de Afinidad?",
+          "ANSWER": "Es una sub unidad de IEEE que toca temas transversales, no técnicos, a todas las ingenierías como lo es la diversidad en carreras de STEM en el caso de WIE"
+        },
+        {
+          "QUESTION": "¿Qué puedo hacer en IEEE WIE ITBA?",
+          "ANSWER": "¡Lo que quieras! Siempre que vaya con nuestros objetivos. Podes unirte a cualquier proye que ya realicemos o proponer una actividad nueva. La organización se construye a partir de lo que los voluntarios deseen"
+        },
+        {
+          "QUESTION": "¿Cuánto me demanda participar en IEEE WIE ITBA?",
+          "ANSWER": "Lo que vos quieras que te demande. Solo tenés que avisar en que cosas querés participar e informar de los avances. Somos todos alumnos por lo que entendemos perfectamente que a veces se nos compctolica mucho, en esos casos, solo es cuestión de comunicar que no vas a estar disponible y no va a haber ningún problema"
+        },
+        {
+          "QUESTION": "¿Cuáles son los objetivos de IEEE WIE ITBA?",
+          "ANSWER": "Los objetivos de IEEE WIE ITBA son: inspirar a más mujeres a seguir carreras en STEM y empoderar a aquellas mujeres que ya se encuentran en campos de STEM para que sean líderes. Con el motivo de lograr los mismos buscamos: bisibilizar el trabajo desarrollado por mujeres en áreas de STEM, proveerles herramientas para que puedan desarrollarse en dichos campos y desmistificar e informar sobre STEM"
+        },
+        {
+          "QUESTION": "¿Cómo se organizan en IEEE WIE ITBA?",
+          "ANSWER": "En IEEE WIE ITBA constamos de 7 departamentos o secciones. Las personas voluntarias pueden participar en todos los que deseen siendo que los proyectos pertenecen a los departamentos y no las personas voluntarias. Dichos departamentos son: Junta Directiva, Media y Comunicación, Fundraising y Tesorería, Logística y Planificación, Educación, Tecnología de la Información y Desarrollo, y Recursos Humanos"
+        }
+      ]
+    },
+    "CONTACT": {
+      "TITLE": "Contacto"
+    }
   }
 }
