chore: updated events' dates and capitalized months

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -164,8 +164,8 @@
     },
     "EVENTS": {
       "TITLE": "Eventos",
-      "CONTENT": "¡Entérate de los próximos eventos!",
-      "MORE": "View more events"
+      "CONTENT": "¡Entérate de nuestros próximos eventos!",
+      "MORE": "Ver más eventos"
     },
     "SPONSORS": "Auspiciantes",
     "CLASSES": {
